force-app/main/default/objects/clofor_com_cfs__Recruitment_Process__c/clofor_com_cfs__Recruitment_Process__c.object-meta.xml
<CustomObject>
    <label>Recruitment Process</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Recruitment Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruitment Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>