force-app/main/default/objects/clofor_com_cfs__Recruitment_Process__c/fields/clofor_com_cfs__Interview_round_required__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Interview_round_required__c</fullName>
    <label>Interview round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Round</fullName>
            </value>
            <value>
                <fullName>2 Rounds</fullName>
            </value>
            <value>
                <fullName>3 Rounds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>