force-app/main/default/objects/clofor_com_cfs__Recruitment_Process__c/fields/clofor_com_cfs__Interviewer03__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Interviewer03__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer (03)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruitment_Process3</relationshipName>
    <type>Lookup</type>
</CustomField>