force-app/main/default/objects/clofor_com_cfs__Recruitment_Process__c/fields/clofor_com_cfs__Interviewer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruitment_Process</relationshipName>
    <type>Lookup</type>
</CustomField>