force-app/main/default/objects/clofor_com_cfs__Recruitment_Process__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Interview_round_required__c</columns>
    <columns>clofor_com_cfs__Approver__c</columns>
    <columns>clofor_com_cfs__Interviewer02__c</columns>
    <columns>clofor_com_cfs__Interviewer03__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>clofor_com_cfs__Interviewer__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>